
Aurora-Sim (Dev) 
Rowan D <greythane@gmail.com>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

<< TerrainGenerator branch >>
* Aurora.Framework.SceneInfo - TerrainChannel.cs
	Added additional perlinNoise generation code - TerrainPerlin.cs
	Modified CreateDefaultTerrain() to pass the landtype entered during console region creation
	Added additional and overide creation procedures for Flatland, Mainland and Island 
	Added GenerateTerrain() to allow user generation of terrain from a console command
* Aurora.Modules.World.Terrain - TerrainModule.cs  
	Added InterfaceGenerateTerrain() for user access to terrain generation
	Added appropriate console command and help details
* Aurora.Modules.World.Startup - FileBasedSimulationData.cs
	Changed default land type to "Flatland" when creating new regions, to avoid confusion with the new "Mainland"

  Oct 2nd 2013
* Aurora.Modules.Terrain - TerrainModule.cs
	Remove added debug commands 
* Aurora.Framework.Sceneinfo - TerrainChannel.cs
	Correct problem when creating/loading a terrainchannel if the source image is not the same as the region size.	

  Oct 1st, 2013
* Aurora.Modules.Terrain - TerrainModule.cs
	Harden LoadFile and SaveFile procedures to avoid complete crash on an unexpected error

  Sept 30th, 2013
* Aurora.Modules.Terrain - TerrainModule.cs
	Finalise updates to load terrain into the correct scene
* Aurora.Services.SQLServices.GridService - GridService.cs
	Add region size to info details
	Correct region URI details
* Aurora.Framework.Services - IGridservice.cs
	Add RegionURI to return region instance uri	
* Aurora.Region - SceneManager.cs
	Add currently selected region name to console prompt    	 	   

  Sept 27th, 2013
* Aurora.Modules.Terrain - TerrainModule.cs
	Update procedures to load terrain into the correct scene as selected

  Sept 26, 2013
* Aurora.ScriptEngine.AuroraDotNetEngine.APIs - LSL_Types.cs - class LSL_Types
	Add (float) type casting to '==' and 'Equals' overrides